[tool.poetry]
name = "change-me"
version = "0.0.0"
description = "this is a super simple template to create a data science project"
authors = ["SORDai"]

[tool.poetry.dependencies]
python="~3.11"


[tool.poetry.dev-dependencies]
pylint = "^2.17.5"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>1.7.0"]
