[tool.poetry]
name = "change-me"
version = "0.0.0"
description = "this is a super simple template to create a data science project"
authors = ["change-me"]

[tool.poetry.dependencies]
python="~3.11"
numpy = "^1.25.2"
pandas = "^2.0.0"
ipykernel = "^6.25.1"
openpyxl = "^3.1.2"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
pylint = "^2.17.5"
mypy = "^1.5.1"
black = "*"
isort = "*"
flake8 = "*"
jupyter-black ="*"


[build-system]
requires = ["poetry-core>=1.7.0"]
